# arbolta

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  pyproject.toml
.github/workflows/: release.yml
crates/arbolta/: Cargo.toml
crates/arbolta/src/: bit.rs  cell.rs  graph.rs  hardware_module.rs  lib.rs  netlist_wrapper.rs  port.rs  signal.rs  temp2.rs  yosys.rs
crates/arbolta/src/cell/: mod.rs  simcells.rs  test_helpers.rs  test_macros.rs
crates/arbolta/src/cell/simlib/: arithmetic.rs  bool_ops.rs  compare_ops.rs  logic_reduce_ops.rs  mod.rs  registers.rs  shift_ops.rs  various.rs
crates/arbolta/tests/: generate_deps.py  helpers.rs  test_bit.rs  test_bitvec.rs  test_cell.rs  test_module.rs  test_signal.rs  test_simcell.rs  test_simcell_module.rs  test_simlib.rs  test_simlib_module.rs
crates/arbolta_pyo3/: Cargo.toml  arbolta.pyi  pyproject.toml
crates/arbolta_pyo3/src/: conversion.rs  hardware_module.rs  lib.rs  ports.rs
crates/fault/: Cargo.toml
crates/fault/src/: lib.rs  main.rs  utils.rs
crates/python_bindings/: Cargo.toml
crates/python_bindings/py_src/arbolta/: __init__.py  design.py
crates/python_bindings/src/: conversion.rs  design.rs
crates/yosys_server/: Cargo.toml
crates/yosys_server/src/: lib.rs  main.rs  server.rs
examples/: synth.tcl  tutorial.ipynb
examples/cells/: cells.v
examples/designs/: inexact_fma_vector_mac.sv  int_vector_mac.sv  kulisch_vector_mac.sv  misc_int_vector_mac.sv  normalized_fma_vector_mac.sv
examples/designs/common/: integer.sv  minifloat.sv  misc.sv  sign_magnitude.sv
experiments/cifar10/: train.ipynb
experiments/cifar10/utils/: dataset.py  minifloat.py  resnet.py  train.py
experiments/mnist/: train.ipynb
experiments/mnist/utils/: __init__.py  dataset.py  hardware.py  minifloat.py  model.py  train.py
experiments/systolic_array/: README.md  synth.tcl
python/py_src/arbolta/: __init__.py  arbolta.pyi
python/tests/: test_port_config.py
requirements/: requirements_experiments.txt
