[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
bincode = { version = "2", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
enum_dispatch = "0.3"
flexbuffers = "25.2"
futures = "0.3"
indexmap = "2.9"
ndarray = "0.16.1"
num-traits = "0.2"
rstest = "0.26"
serde = { version = "1", features = ["derive"] }
serde-error = "0.1"
smallvec = { version = "1", features = ["serde", "impl_bincode"] }
tarpc = { version = "0.36", features = ["full"] }
tempfile = "3.19"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
yosys-netlist-json = { git = "https://github.com/alexredd99/yosys-netlist-json.git" }
once_cell = "1.21"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
