[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
arbolta = { path = "crates/arbolta" }
anyhow = "1"
derive_more = { version = "2", features = ["full"] }
enum_dispatch = "0.3"
indexmap = "2.12"
ndarray = "0.16.1"
num-traits = "0.2"
once_cell = "1.21"
postcard = "1"
rstest = "0.26"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
yosys-netlist-json = { git = "https://github.com/alexredd99/yosys-netlist-json.git" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
