[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/KastnerRG/arbolta"
homepage = "https://github.com/KastnerRG/arbolta"
authors = ["Alexander Redding <alredding@ucsd.edu>"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
arbolta = { path = "crates/arbolta" }
derive_more = { version = "2", features = ["full"] }
enum_dispatch = "0.3"
flexbuffers = "25.12.19"
indexmap = "2.12"
ndarray = "0.16.1"
num-traits = "0.2"
once_cell = "1.21"
petgraph = { version = "0.8.3", features = ["serde-1"] }
rstest = "0.26"
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
yosys-netlist-json = { git = "https://github.com/alexredd99/yosys-netlist-json.git" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
