[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "arbolta"
dynamic = ["version"]
authors = [
    { name = "Alexander Redding", email = "alredding@ucsd.edu" },
]
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "maturin>=1.10.2",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
]

[project.urls]
Repository = "https://github.com/KastnerRG/arbolta"

[tool.maturin]
manifest-path = "crates/arbolta_pyo3/Cargo.toml"
strip = true

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "src/**/*.rs" },
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
