[package]
name = "arbolta"
version = "0.1.0"
authors = ["AMD Research & Advanced Development"]
edition = "2024"

[dependencies]
anyhow = { workspace = true }
derive-new = "0.7"
derive_more = { workspace = true }
enum_dispatch = { workspace = true }
indexmap = { workspace = true }
inventory = "0.3.21"
ndarray = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
petgraph = { version = "0.8.3", features = ["serde-1"] }
postcard = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
yosys-netlist-json = { workspace = true }
