[package]
name = "arbolta"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
description = "Core Arbolta hardware simulator"
exclude = [
    "tests/*"
]

[dependencies]
anyhow = { workspace = true }
derive-new = "0.7"
derive_more = { workspace = true }
enum_dispatch = { workspace = true }
indexmap = { workspace = true }
inventory = "0.3.21"
ndarray = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
paste = "1.0.15"
petgraph = { workspace = true }
postcard = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.145"
thiserror = { workspace = true }
yosys-netlist-json = { workspace = true }
