[package]
name = "arbolta_pyo3"
version = "0.1.0"
authors = ["AMD Research & Advanced Development"]
edition = "2024"

[lib]
name = "arbolta"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
arbolta = { workspace = true }
pyo3 = { version = "0.27", features = ["anyhow"] }
numpy = "0.27"
num-traits = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
