[package]
name = "arbolta_pyo3"
version = "0.1.0"
authors = ["Alexander Redding"]
edition = "2024"

[lib]
name = "arbolta"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
arbolta = { workspace = true }
num-traits = { workspace = true }
numpy = "0.27"
petgraph = { workspace = true }
pyo3 = { version = "0.27", features = ["anyhow"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
