[package]
name = "arbolta_pyo3"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "../../README.md"
description = "Python bindings for Arbolta hardware simulator"

[lib]
name = "arbolta"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
arbolta = { workspace = true }
flexbuffers = { workspace = true }
num-traits = { workspace = true }
numpy = "0.27"
petgraph = { workspace = true }
pyo3 = { version = "0.27", features = ["anyhow"] }
serde = { workspace = true }
thiserror = { workspace = true }
