[package]
name = "fault"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray-npy = "0.9.1"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-stats = "0.6.0"
num-traits = "0.2"
rayon = "1.10.0"
arbolta = { path = "../arbolta" }
once_cell = "1.21.3"
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
