[package]
name = "arbolta-python"
version = "0.1.0"
authors = ["AMD Research & Advanced Development"]
edition = "2024"

[lib]
name = "arbolta"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.2"
numpy = "0.24.0"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = { workspace = true }
yosys-netlist-json = { workspace = true }
tokio = { workspace = true }

[dependencies.arbolta]
path = "../arbolta"

[features]
defaut = ["pyo3/extension-module"]

[package.metadata.maturin]
python-source = "py_src"
